<resources>
    <string name="app_name">news_project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_filter">Создать фильтр</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_api">with google api</string>
    <string name="filters_introduce">ваши темы</string>
    <string name="news_photo_side_long">100dp</string>
    <string name="add_filter">добавить</string>
    <string name="save_filter">сохранить</string>
    <string name="redactor_filter_introduce">Ваша тема</string>
    <string name="name">название</string>
    <string name="description">описание</string>
    <string name="delete_filter_accept">Вы точно хотите удалить данный фильтр?</string>
    <string name="confirm_delete_filter">Да, хочу удалить</string>
    <string name="noNewsText">Нет новостей</string>
    <string name="to_filters">мои темы</string>
    <string name="select_filter">выбрать тему</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_all_filters">выбрать все</string>
    <string name="select_filter_text">выберите фильтр</string>
</resources>