<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.NewsFragment">


    <TextView
        android:id="@+id/noNewsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noNewsText"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonsGrouper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_corner"
        android:padding="4dp"
        android:text="2023-01-19"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:drawableTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsGrouper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsList">

        <Button
            android:id="@+id/toFiltersButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/to_filters"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/grey" />

        <Button
            android:id="@+id/selectFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_filter"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/grey" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>